<resources>
    <string name="app_name">tugas2_H071191035</string>
    <string name="name">Akmal Zuhdy Prasetya</string>
    <string name="nim">H071191035</string>
    <string name="ttl">31 Agustus 2001</string>
    <string name="title">BIODATA MAHASISWA SISTEM INFORMASI</string>
    <string name="motto">Just trying to survive</string>
    <string name="content">
        Attack On Titan season 4 will be ending the series with episode 16.
        As of writing this, there are absolutely NO confirmed reports that there will be more Attack On Titan anime content coming down the line.
        So, there is still a lot of potentials for the anime series to leave major questions unanswered.
        Any rumors that Attack On Titan season 4 will be split into two halves, is just that: a rumor.
        The other big rumor is that Attack On Titan could get one or two feature-length film releases,
        which will serve to wrap up the events of the manga in bigger chunks.
    </string>
</resources>