<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad3"
    tools:context=".page_biodata">

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="220dp"
        android:src="@mipmap/pp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:background="@drawable/border2"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:background="@drawable/border2"
        android:gravity="center_horizontal"
        android:text="@string/nim"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:background="@drawable/border2"
        android:gravity="center_horizontal"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="26dp"
        android:background="@drawable/border2"
        android:gravity="center_horizontal"
        android:text="@string/ttl"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="to_page_home"
        android:text="Back to Beranda"

        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:onClick="to_page_article"
        android:text="Artikel"

        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.187" />

</android.support.constraint.ConstraintLayout>